--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a>
 
             <!-- Link 3: LinkedIn -->
-            <a href="https://www.linkedin.com/feed/" target="_blank" rel="noopener noreferrer" class="flex flex-col items-center justify-center p-6 bg-black/30 backdrop-blur-sm rounded-2xl shadow-lg hover:bg-black/50 hover:scale-105 transform transition-all duration-300 ease-in-out">
+            <a href="https://www.linkedin.com/company/wavecapital1/posts/?feedView=all" target="_blank" rel="noopener noreferrer" class="flex flex-col items-center justify-center p-6 bg-black/30 backdrop-blur-sm rounded-2xl shadow-lg hover:bg-black/50 hover:scale-105 transform transition-all duration-300 ease-in-out">
                 <!-- Ícone SVG para o LinkedIn -->
                 <svg width="60px" height="60px" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g fill="none"> <path d="M0 18.338C0 8.216 8.474 0 18.92 0h218.16C247.53 0 256 8.216 256 18.338v219.327C256 247.79 247.53 256 237.08 256H18.92C8.475 256 0 247.791 0 237.668V18.335z" fill="#069"></path> <path d="M77.796 214.238V98.986H39.488v115.252H77.8zM58.65 83.253c13.356 0 21.671-8.85 21.671-19.91-.25-11.312-8.315-19.915-21.417-19.915-13.111 0-21.674 8.603-21.674 19.914 0 11.06 8.312 19.91 21.169 19.91h.248zM99 214.238h38.305v-64.355c0-3.44.25-6.889 1.262-9.346 2.768-6.885 9.071-14.012 19.656-14.012 13.858 0 19.405 10.568 19.405 26.063v61.65h38.304v-66.082c0-35.399-18.896-51.872-44.099-51.872-20.663 0-29.738 11.549-34.78 19.415h.255V98.99H99.002c.5 10.812-.003 115.252-.003 115.252z" fill="#ffffff"></path> </g> </g></svg>
                 <span class="font-semibold text-sm">LinkedIn</span>
@@ -83,7 +83,7 @@
             </a>
 
              <!-- Link 7: YouTube -->
-            <a href="https://youtube.com" target="_blank" rel="noopener noreferrer" class="flex flex-col items-center justify-center p-6 bg-black/30 backdrop-blur-sm rounded-2xl shadow-lg hover:bg-black/50 hover:scale-105 transform transition-all duration-300 ease-in-out">
+            <a href="https://www.youtube.com/@XP_Oficial" target="_blank" rel="noopener noreferrer" class="flex flex-col items-center justify-center p-6 bg-black/30 backdrop-blur-sm rounded-2xl shadow-lg hover:bg-black/50 hover:scale-105 transform transition-all duration-300 ease-in-out">
                 <!-- Ícone SVG para o Youtube -->
                 <svg height="60px" width="60px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 461.001 461.001" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path style="fill:#F61C0D;" d="M365.257,67.393H95.744C42.866,67.393,0,110.259,0,163.137v134.728 c0,52.878,42.866,95.744,95.744,95.744h269.513c52.878,0,95.744-42.866,95.744-95.744V163.137 C461.001,110.259,418.135,67.393,365.257,67.393z M300.506,237.056l-126.06,60.123c-3.359,1.602-7.239-0.847-7.239-4.568V168.607 c0-3.774,3.982-6.22,7.348-4.514l126.06,63.881C304.363,229.873,304.298,235.248,300.506,237.056z"></path> </g> </g></svg>
                 <span class="font-semibold text-sm">YouTube</span>
