--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               Sugestão: use um site como Unsplash ou Pexels para imagens gratuitas.
               Exemplo: https://images.unsplash.com/photo-1558591710-4b4a1ae0f04d?q=80&w=1887
             */
-            background-image: url('https://github.com/mathbiazolli/links/blob/main/imagens/unnamed.png?raw=true');
+            background-image: url('https://github.com/mathbiazolli/links/blob/main/imagens/unnamed.jpg?raw=true');
             background-size: cover;
             background-position: center;
             background-attachment: fixed; /* Mantém a imagem fixa durante a rolagem */
